// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsightsLabel component should render defaults 1`] = `
<span
  className="pf-v5-c-label pf-m-blue"
>
  <span
    className="pf-v5-c-label__content"
  >
    <span
      className="pf-v5-c-label__icon"
    >
      <AngleDoubleDownIcon />
    </span>
    <span
      className="pf-v5-c-label__text"
    >
      Low
    </span>
  </span>
</span>
`;

exports[`InsightsLabel component should render with icon 1`] = `
<span
  className="pf-v5-c-label pf-m-blue"
>
  <span
    className="pf-v5-c-label__content"
  >
    <span
      className="pf-v5-c-label__icon"
    >
      <AngleDoubleDownIcon />
    </span>
    <span
      className="pf-v5-c-label__text"
    >
      Low
    </span>
  </span>
</span>
`;

exports[`InsightsLabel component should render without icon 1`] = `
<span
  className="pf-v5-c-label pf-m-blue"
>
  <span
    className="pf-v5-c-label__content"
  >
    <span
      className="pf-v5-c-label__text"
    >
      Low
    </span>
  </span>
</span>
`;
